@@ -210,14 +210,6 @@ CaMuleExternalConnector::CaMuleExternalConnector()
 	  m_strOSDescription(NULL)
 {
 	SetAppName(wxT("aMule"));	// Do not change!
-	m_appname =
-		// Find out Application Name
-#ifdef WEBSERVERDIR
-		"amuleweb"
-#else
-		"amulecmd"
-#endif
-		;
 }
 
 CaMuleExternalConnector::~CaMuleExternalConnector()
@@ -432,8 +424,10 @@ void CaMuleExternalConnector::ConnectAndRun(const wxString &ProgName, const wxSt
 	}
 }
 
-void CaMuleExternalConnector::OnInitCmdLine(wxCmdLineParser& parser)
+void CaMuleExternalConnector::OnInitCmdLine(wxCmdLineParser& parser, const char* appname)
 {
+	m_appname = appname;
+
 	parser.AddSwitch(wxEmptyString, wxT("help"),
 		_("Show this help text."),
 		wxCMD_LINE_PARAM_OPTIONAL);
